# the-oracle

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  railway.toml  run.ps1  run.sh
backend/: config.py  main.py
backend/models/: schemas.py
backend/routers/: books.py  query.py
backend/services/: agent.py  agent_tools.py  chunker.py  embeddings.py  epub_parser.py  qa.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnswerCard.jsx  BookItem.jsx  FloatingDecorations.jsx  Header.jsx  LibraryPanel.jsx  ReadingPanel.jsx  ReasoningTimeline.jsx  SavedTab.jsx  SearchBar.jsx  TarotLoader.jsx
frontend/src/hooks/: useOracle.js  useSavedQueries.js
frontend/src/styles/: AnswerCard.css  App.css  BookItem.css  FloatingDecorations.css  Header.css  LibraryPanel.css  ReadingPanel.css  ReasoningTimeline.css  SavedTab.css  SearchBar.css  TarotLoader.css
